<resources>
    <string name="app_name">RecyclerViewStudy</string>
    <string name="simple_demo">简单使用</string>
    <string name="simple_use_with_item_line">简单使用--带有分隔线</string>
    <string name="simple_use_with_item_tag">简单使用--带有TAG</string>
    <string name="simple_use_with_item_group">简单使用--带有分组</string>
    <string name="simple_use_with_item_group2">简单使用--带有分组2</string>
    <string name="simple_use_with_view_type">简单使用--viewType</string>
    <string name="simple_use_with_base_adapter">简单使用--base adapter</string>
    <string name="simple_use_with_grid">简单使用--grid layout</string>
    <string name="simple_use_with_staggered_grid">简单使用--staggered grid layout</string>
    <string name="simple_use_with_swipe_delete">简单使用--List排序与删除</string>
    <string name="simple_use_with_grid_swipe_delete">简单使用--Grip排序与删除</string>
</resources>